# katetris

./: CMakeLists.txt  buttons.h  chconf.h  common.c  common.h  configure.sh  display.c  display.h  env.h.in  fault.h  font.h  halconf.h  impl.h  impl_sitl.c  impl_sitl.h  impl_stm32.c  impl_stm32.h  main.c  mcuconf.h  options.txt  sitl.c  syscalls.c  test_buttons.c  test_eeprom.c  test_st7789.c  tetris.c  tetris.h  text.c  text.h  types.h
.cache/clangd/index/: board.h.9D304ECC30DE3B18.idx  cache.h.D8AE722BAD092A31.idx  ccportab.h.0E9171F8B613DF73.idx  ch.h.4183AF05DE3A860B.idx  chalign.h.FB77789822AE4735.idx  chbsem.h.966288D9047F96A4.idx  chchecks.h.FF651275E8FF8933.idx  chcond.c.11FEDECAB5329206.idx  chcond.h.69A2F6A16FAEB75B.idx  chconf.h.25473C672C51AD7D.idx  chcore.c.C6E1F5FD9016972D.idx  chcore.c.EDE7160082F04FEB.idx  chcore.h.0863F4244539A822.idx  chcore_timer.h.DF022500DC08A027.idx  chcustomer.h.73D41987C7E072E2.idx  chdebug.c.C9C21FB83EFD9296.idx  chdebug.h.68627421105AEBE1.idx  chdelegates.c.829B1DE4284A3712.idx  chdelegates.h.D81303B07FABA6D9.idx  chdynamic.c.F6EF030DCCC09C7B.idx  chdynamic.h.3819A87B50C6B748.idx  chearly.h.50C777A4712FC04A.idx  chevents.c.0441488332D5F01B.idx  chevents.h.EDBCC957057DE117.idx  chfactory.c.AEDD05FB07866404.idx  chfactory.h.C72FB5BCF45873D7.idx  chinstances.c.61C2A753F7C67B74.idx  chinstances.h.922B1C6A39436447.idx  chjobs.h.143E7020E794E70A.idx  chlib.h.D978F468773FC22E.idx  chlicense.h.637C8FA4253300CB.idx  chlists.h.42B4C3DF3D4E20C4.idx  chmboxes.c.5C443B4FD5F5DE61.idx  chmboxes.h.8E5807B507BF979D.idx  chmemcore.c.E4039889F3D90ABB.idx  chmemcore.h.59DC4EFC802082BB.idx  chmemheaps.c.96D4B1B85BB09810.idx  chmemheaps.h.2C3F8799269CB0DE.idx  chmempools.c.4AACD35E6F2080DD.idx  chmempools.h.A7D9053581934BA1.idx  (+207 more)
chibios/: CMakeLists.txt
chibios/os/common/startup/ARMCMx/compilers/GCC/: vectors.S
